2010-09-27  Sergio Martin <sergio.martin@artica.es>

	* godmode/reporting/graph_builder.graph_editor.php
	godmode/reporting/graph_builder.preview.php: Fixed few
	foreach loops to avoid notices setting empty array to 
	false variables

2010-09-27  Raúl Mateos <raulofpandora@gmail.com>

	* godmode/users/user_list.php, godmode/users/configure_user.php:
	change the sec url variable to show the menu highlighted.

2010-09-27  Sergio Martin <sergio.martin@artica.es>

	* operation/events/events_list.php: Added confirm popup
	to delete event button

2010-09-27  Sergio Martin <sergio.martin@artica.es>

	* godmode/reporting/graph_builder.php: Fixed typo bug

2010-09-27  Sergio Martin <sergio.martin@artica.es>

	* godmode/reporting/graph_builder.main.php: Set default
	value to id_group to avoid notices

2010-09-26  Sancho Lerena <slerena@artica.es>

	* pandora_console.spec: Updated some missing deps.

	* operation/agentes/estado_generalagente.php: Fixed
	notice on empty array.

	* pandora_console.redhat.spec: Specific SPEC for redhat.

2010-09-24  Sancho Lerena <slerena@artica.es>

	* install.php: Updated version and build


2010-09-24  Miguel de Dios  <miguel.dedios@artica.es>

	* operation/events/events.php: fixed the lost $url var, recovered from the
	last version of SVN.
	
	Fixes: #3071767

2010-09-23  Raúl Mateos <raulofpandora@gmail.com>

	* extensions/users_connected.php: Show text to admin if no other
	user connected.
	TO DO: This extension gives non-accurate information due to the use 
	of timestamp in one hour since the login event. It should be
	improved to check logout events in table.

2010-09-23  Raúl Mateos <raulofpandora@gmail.com>

	* godmode/users/user_list.php: Able to edit profiles.
	
	* godmode/users/configure_profile.php: New page, based on the old
	profile one (that should be deleted if all it's OK)
	
	* godmode/menu.php: Removed profiles menu entry.
	
	* godmode/alerts/alert_list.list.php: Centered several icons.
